# mathAI

./: .env.example  .gitignore  Makefile  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1c7f2b3e4d5_add_book_sections_figures_and_chunk_blocks.py  db6f1536ede4_initial_schema.py
backend/app/: main.py
backend/app/api/routes/: books.py  concepts.py  grading.py  lessons.py  plans.py  profiles.py  progress.py  quizzes.py
backend/app/core/: config.py  errors.py  logging.py  network.py
backend/app/db/: base.py
backend/app/llm/: usage_tracker.py
backend/app/llm/clients/: __init__.py  anthropic_client.py  base.py  gemini_client.py  openai_client.py
backend/app/llm/prompts/: answer_grading.md  book_profile.md  concept_dedup.md  concept_extraction.md  (+7 more)
backend/app/models/: __init__.py  book.py  concept.py  figure.py  grading.py  lesson.py  memory.py  plan.py  profile.py  progress.py  proof.py  question.py  quiz.py  section.py  tidbit.py  user.py
backend/app/schemas/: book.py  concept.py  grading.py  lesson.py  page_extraction.py  plan.py  profile.py  progress.py  proof.py  question.py  quiz.py  tidbit.py  user.py
backend/app/services/: pipeline.py
backend/scripts/: inspect_structure.py  profile_book.py  run_pipeline.py  seed_math_text.py  test_page_extract.py  wipe_book.py
backend/tests/fixtures/: calculus_limit_source.txt  linear_algebra_span_source.txt  probability_bayes_source.txt  real_analysis_sequence_source.txt
backend/tests/notebooks/: inspect_theorem_proof_adjacency.ipynb
(+51 files in other folders)
